--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_SOCKET_URL=http://localhost:4000
 REACT_APP_API_URL=http://localhost:3000
 REACT_APP_PEER_HOST=localhost
+REACT_APP_PEER_PORT=443
